<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/action_face_to_face_share"
        android:icon="@drawable/ic_face_to_face_share"
        android:title="@string/action_face_to_face_share" />

    <item
        android:id="@+id/action_clear_temp_dir"
        android:icon="@drawable/ic_clear_temp_dir"
        android:title="@string/action_clear_temp_dir" />

    <item
        android:id="@+id/action_night_mode"
        android:icon="@drawable/ic_night_mode"
        android:title="@string/action_night_mode" />

    <item
        android:id="@+id/action_license"
        android:icon="@drawable/ic_license"
        android:title="@string/action_license" />

    <item
        android:id="@+id/action_support_us"
        android:icon="@drawable/ic_support_us"
        android:title="@string/action_support_us" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />

    <item android:title="@string/janyo_studio">
        <menu>
            <item android:title="@string/dick_light" />
            <item android:title="@string/zh_lyh" />
            <item android:title="@string/cieyget" />
            <item android:title="@string/mystery0" />
            <item android:title="@string/gsoy" />
            <item android:title="@string/kiva" />
        </menu>
    </item>

</menu>
